# Flask_sns_test

./: README.md  app.py  database.db  extensions.py  models.py  pyproject.toml
migrations/versions/: ce72510fd3e4_add_replis_to_post.py
service/: feedpost_service.py  file_service.py  post_service.py  user_service.py
static/js/: home.js
templates/: home.html  login.html  post_detail.html  sigin.html  template.html
